[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Screenshots/Chapter2/TimeJump.webp" type="Texture" id=1]
[ext_resource path="res://Scenes/Menu/LoadGameScene/Stage.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Screenshots/Chapter1/Beginning.webp" type="Texture" id=3]
[ext_resource path="res://Sprites/Screenshots/Chapter1/FirstDay.webp" type="Texture" id=4]
[ext_resource path="res://Sprites/Screenshots/Chapter1/Celebration.webp" type="Texture" id=5]
[ext_resource path="res://Sprites/Screenshots/Chapter1/Parting.webp" type="Texture" id=6]
[ext_resource path="res://Sprites/Screenshots/Chapter2/NewBeginning.webp" type="Texture" id=7]
[ext_resource path="res://Sprites/Screenshots/Chapter2/NewHoliday.webp" type="Texture" id=8]
[ext_resource path="res://Sprites/Screenshots/Chapter2/Journey.webp" type="Texture" id=9]
[ext_resource path="res://Sprites/Screenshots/Chapter2/Memories.webp" type="Texture" id=10]
[ext_resource path="res://Sprites/Screenshots/Chapter3/SecretSociety.webp" type="Texture" id=11]
[ext_resource path="res://Sprites/Screenshots/Chapter3/DailyLife.webp" type="Texture" id=12]
[ext_resource path="res://Sprites/Screenshots/Chapter3/UnexpectedDecisions.webp" type="Texture" id=13]
[ext_resource path="res://Sprites/Screenshots/Chapter4/IllusoryWorld.webp" type="Texture" id=14]
[ext_resource path="res://Sprites/Screenshots/Chapter4/Escape.webp" type="Texture" id=15]
[ext_resource path="res://Sprites/Screenshots/Chapter4/Infiltration.webp" type="Texture" id=16]
[ext_resource path="res://Scripts/Scenes/Menu/Load.gd" type="Script" id=17]

[node name="LoadScene" type="ScrollContainer"]
light_mask = 0
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 860, 600 )
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
light_mask = 0
margin_right = 800.0
margin_bottom = 6890.0
custom_constants/separation = 20

[node name="Chapter1" type="VBoxContainer" parent="VBoxContainer"]
light_mask = 0
margin_right = 800.0
margin_bottom = 1810.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Chapter1"]
light_mask = 0
margin_right = 800.0
margin_bottom = 80.0
rect_min_size = Vector2( 420, 80 )
text = "CHAPTER_1"
align = 1
valign = 1

[node name="Name" type="Label" parent="VBoxContainer/Chapter1"]
light_mask = 0
margin_top = 90.0
margin_right = 800.0
margin_bottom = 170.0
rect_min_size = Vector2( 460, 80 )
text = "CHAPTER_1_NAME"
align = 1
valign = 1

[node name="Beginning" parent="VBoxContainer/Chapter1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 180.0
margin_right = 800.0
margin_bottom = 580.0
texture = ExtResource( 3 )
stage_name = "BEGINNING"
path_to_scene = "res://Scenes/Beginning/00.Date.tscn"

[node name="FirstDay" parent="VBoxContainer/Chapter1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 590.0
margin_right = 800.0
margin_bottom = 990.0
texture = ExtResource( 4 )
stage_name = "FIRST_DAY"
path_to_scene = "res://Scenes/Beginning/16.Date.tscn"

[node name="Celebration" parent="VBoxContainer/Chapter1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1000.0
margin_right = 800.0
margin_bottom = 1400.0
texture = ExtResource( 5 )
stage_name = "CELEBRATION"
path_to_scene = "res://Scenes/Ignoring/7.Date.tscn"

[node name="Parting" parent="VBoxContainer/Chapter1" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1410.0
margin_right = 800.0
margin_bottom = 1810.0
texture = ExtResource( 6 )
stage_name = "PARTING"
path_to_scene = "res://Scenes/Ignoring/24.Date.tscn"

[node name="Chapter2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 1830.0
margin_right = 800.0
margin_bottom = 4050.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Chapter2"]
light_mask = 0
margin_right = 800.0
margin_bottom = 80.0
rect_min_size = Vector2( 420, 80 )
text = "CHAPTER_2"
align = 1
valign = 1

[node name="Name" type="Label" parent="VBoxContainer/Chapter2"]
light_mask = 0
margin_top = 90.0
margin_right = 800.0
margin_bottom = 170.0
rect_min_size = Vector2( 460, 80 )
text = "CHAPTER_2_NAME"
align = 1
valign = 1

[node name="TimeJump" parent="VBoxContainer/Chapter2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 180.0
margin_right = 800.0
margin_bottom = 580.0
texture = ExtResource( 1 )
stage_name = "TIME_JUMP"
path_to_scene = "res://Scenes/Basement/0.Speach.tscn"

[node name="NewBeginning" parent="VBoxContainer/Chapter2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 590.0
margin_right = 800.0
margin_bottom = 990.0
texture = ExtResource( 7 )
stage_name = "NEW_BEGINNING"
path_to_scene = "res://Scenes/QuickBeginning/1.Fireworks.tscn"

[node name="NewHoliday" parent="VBoxContainer/Chapter2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1000.0
margin_right = 800.0
margin_bottom = 1400.0
texture = ExtResource( 8 )
stage_name = "NEW_HOLIDAY"
path_to_scene = "res://Scenes/Celebration/1.Intro.tscn"

[node name="Journey" parent="VBoxContainer/Chapter2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1410.0
margin_right = 800.0
margin_bottom = 1810.0
texture = ExtResource( 9 )
stage_name = "JOURNEY"
path_to_scene = "res://Scenes/Disappearance/8.Alarm.tscn"

[node name="Memories" parent="VBoxContainer/Chapter2" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1820.0
margin_right = 800.0
margin_bottom = 2220.0
texture = ExtResource( 10 )
stage_name = "MEMORIES"
path_to_scene = "res://Scenes/Disappearance/13.Text.tscn"

[node name="Chapter3" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 4070.0
margin_right = 800.0
margin_bottom = 5470.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Chapter3"]
light_mask = 0
margin_right = 800.0
margin_bottom = 80.0
rect_min_size = Vector2( 420, 80 )
text = "CHAPTER_3"
align = 1
valign = 1

[node name="Name" type="Label" parent="VBoxContainer/Chapter3"]
light_mask = 0
margin_top = 90.0
margin_right = 800.0
margin_bottom = 170.0
rect_min_size = Vector2( 460, 80 )
text = "CHAPTER_3_NAME"
align = 1
valign = 1

[node name="SecretSociety" parent="VBoxContainer/Chapter3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 180.0
margin_right = 800.0
margin_bottom = 580.0
texture = ExtResource( 11 )
stage_name = "SECRET_SOCIETY"
path_to_scene = "res://Scenes/SS/1.House.tscn"

[node name="DailyLife" parent="VBoxContainer/Chapter3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 590.0
margin_right = 800.0
margin_bottom = 990.0
texture = ExtResource( 12 )
stage_name = "DAILY_LIFE"
path_to_scene = "res://Scenes/Despair/1.Street.tscn"

[node name="UnexpectedDecisions" parent="VBoxContainer/Chapter3" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1000.0
margin_right = 800.0
margin_bottom = 1400.0
texture = ExtResource( 13 )
stage_name = "UNEXPECTED_DECISIONS"
path_to_scene = "res://Scenes/Despair/16.Text.tscn"

[node name="Chapter4" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 5490.0
margin_right = 800.0
margin_bottom = 6890.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/Chapter4"]
light_mask = 0
margin_right = 800.0
margin_bottom = 80.0
rect_min_size = Vector2( 420, 80 )
text = "CHAPTER_4"
align = 1
valign = 1

[node name="Name" type="Label" parent="VBoxContainer/Chapter4"]
light_mask = 0
margin_top = 90.0
margin_right = 800.0
margin_bottom = 170.0
rect_min_size = Vector2( 460, 80 )
text = "CHAPTER_4_NAME"
align = 1
valign = 1

[node name="IllusoryWorld" parent="VBoxContainer/Chapter4" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 180.0
margin_right = 800.0
margin_bottom = 580.0
texture = ExtResource( 14 )
stage_name = "ILLUSORY_WORLD"
path_to_scene = "res://Scenes/Hope/1.Field.tscn"

[node name="Escape" parent="VBoxContainer/Chapter4" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 590.0
margin_right = 800.0
margin_bottom = 990.0
texture = ExtResource( 15 )
stage_name = "ESCAPE"
path_to_scene = "res://Scenes/Hope/10.Message.tscn"

[node name="Infiltration" parent="VBoxContainer/Chapter4" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1000.0
margin_right = 800.0
margin_bottom = 1400.0
texture = ExtResource( 16 )
stage_name = "INFILTRATION"
path_to_scene = "res://Scenes/Hope/18.Infiltration.tscn"
